--- a/src/styles/components/_Track.scss
+++ b/src/styles/components/_Track.scss
@@ -25,7 +25,7 @@
   margin-bottom: calc(var(--spacer) / 2);
 }
 
-.track__url {
+.track__link {
   align-items: flex-start;
   display: flex;
   color: var(--color-black);
