--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 :root {
   --color-black: #191a1a;
   --color-accent: lightgray;
-  --color-primary: #2F4155;
+  --color-primary: dodgerblue;
   --color-secondary: mediumseagreen;
   --color-white: #f5f5f5;
 
