--- a/src/styles/base/_form.scss
+++ b/src/styles/base/_form.scss
@@ -1,10 +1,9 @@
 :root {
   --input-padding: 1rem;
   --input-border-radius: 0.15rem;
-  --input-border-color: lightgray;
-  --input-border-color-focus: dodgerblue;
-  --input-border-color-error: crimson;
-  --input-border-color-selected: mediumseagreen;
+  --input-border-color: var(--color-accent);
+  --input-border-color-focus: var(--color-primary);
+  --input-border-color-selected: var(--color-secondary);
   --input-bg-color-selected: var(--input-border-color-selected);
   --input-color-focus: var(--input-border-color-focus);
   --input-color-selected: var(--input-border-color-selected);
