Clean up styles and add description text

--- a/src/styles/base/_form.scss
+++ b/src/styles/base/_form.scss
@@ -57,6 +57,7 @@ input,
   background-color: var(--btn-bg-color);
   border-color: var(--btn-border-color);
   color: var(--btn-color);
+  cursor: pointer;
   width: auto;
 
   &:focus {
