Add user authentication and clean up code

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,6 +2,7 @@
 @import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/utilities";
+@import "abstracts/animations";
 
 @import "base/reset";
 @import "base/typography";
