--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -65,14 +65,18 @@ body {
   }
 
   .track {
-    padding: 0;
+    padding: 0 0 100%;
+    overflow: hidden;
 
     + .track {
       border-top: none;
     }
 
     img {
+      height: 100%;
       max-width: 100%;
+      object-fit: contain;
+      position: absolute;
     }
 
     .track__info {
